@@ -1,8 +1,11 @@
 Hyperlinks and -targets
 -----------------------
 
-In LaTeX, we must set an explicit anchor (``\phantomsection``) for a 
-_`hypertarget in plain text` but not in a table or figure caption:
+In LaTeX, we must set an explicit anchor (``\phantomsection``) for a
+_`hypertarget in plain text` or in a figure but not in a longtable or
+caption:
+
+.. _`table label`:
 
 .. table:: Table with _`hypertarget in table title`.
 
@@ -10,14 +13,20 @@ _`hypertarget in plain text` but not in a table or figure caption:
    False  True  None
    =====  ===== =====
 
+.. _`figure label`:
+
 .. figure:: ../../../docs/user/rst/images/biohazard.png
 
    Figure with _`hypertarget in figure caption`.
-   
-   Legend with _`hypertarget in figure legend`.
-   
-See `hypertarget in plain text`_,
-`hypertarget in table title`_,
-`hypertarget in figure caption`_, and
-`hypertarget in figure legend`_,
 
+   Legend with _`hypertarget in figure legend`.
+
+.. _`image label`:
+
+.. image::  ../../../docs/user/rst/images/biohazard.png
+
+See `hypertarget in plain text`_,
+`table label`_, `hypertarget in table title`_,
+`figure label`_, `hypertarget in figure caption`_,
+`hypertarget in figure legend`_, and
+`image label`_.
